--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
-language: python
-script: python3 hello.py
+matrix:
+  include:
+    - language: python
+      script: python3 hello.py
+
+  include: 
+    - language: c
+      script: gcc hello_world.c
