edited yaml file to build gfortran, need to verify this works as travis ci doesnt use fortran

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 stages:
   - buildpy
   - buildc
+  - buildf90
   - dockit
 
+addons:
+  apt:
+    packages:
+    - gfortran
+  
 matrix:
   include:
       - stage: buildpy
@@ -13,6 +19,15 @@ matrix:
         language: c
         script: gcc hello_world.c
       
+      - stage: buildf90
+        language: python
+        addons:
+          apt:
+            packages:
+            - gfortran
+        script: gfortran hello.f90
+        
+
       - stage: dockit
         language: c
         services: 
