--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,6 @@ matrix:
         services: 
           - docker
         script: 
-          - docker run hello-world
-          - docker ps
+          - docker pull pnwairfire/bluesky
+          - docker run pnwairfire/bluesky bsp -h
           - echo "end of multiline script"
