--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 stages:
   - dockit
+  - data-verification
   
 matrix:
   include:
@@ -11,4 +12,13 @@ matrix:
             - docker pull pnwairfire/bluesky-framework
             #bluesky binary is not at root of image, hence long path
             - docker run pnwairfire/bluesky-framework /bluesky/dist/bluesky/./bluesky -h -h
-            - echo "end of multiline script"
+
+        - stage: data-verification
+          language: python
+          python: 
+            - "3.7"
+          install:
+            - pip install pandas
+          script:
+            - cd test/mvp-output
+            - python3 test.py
